--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dom-to-images",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "dom-to-image but generates high-resolution images",
   "license": "MIT",
   "files": [
@@ -14,9 +14,12 @@
     "test": "npm run build"
   },
   "devDependencies": {
-    "changedpi": "^1.0.4",
-    "dom-to-image-chrome-fix-retina": "^2.6.0",
     "tsup": "^4.14.0",
     "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "changedpi": "^1.0.4",
+    "html-to-image": "^1.11.11",
+    "html2canvas": "^1.4.1"
   }
 }
